feat: 沙箱配置 securityManager